--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ZZH的个人网页</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
             color: #333;
             margin: 0;
@@ -45,15 +45,18 @@
         .profile h1 {
             margin: 0;
             animation: fadeInDown 2s;
+            font-size: 3em;
         }
 
         .profile p {
             animation: fadeInUp 2s;
+            font-size: 1.2em;
         }
 
         .interests h2 {
             margin-top: 2em;
             animation: fadeInUp 2s;
+            font-size: 2em;
         }
 
         .valorant-highlights {
@@ -61,7 +64,7 @@
         }
 
         .highlight-video {
-            margin: 1em 0;
+            margin: 2em 0;
             display: inline-block;
             animation: fadeIn 2s;
         }
@@ -110,6 +113,31 @@
                 opacity: 1;
             }
         }
+
+        .highlight-title {
+            font-size: 1.5em;
+            color: #333;
+            margin-bottom: 1em;
+        }
+
+        footer {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 1em 0;
+            text-align: center;
+            margin-top: 2em;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        footer a {
+            color: #fda085;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        footer a:hover {
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -119,7 +147,7 @@
     <div class="container">
         <section class="profile">
             <h1>ZZH</h1>
-            <p>职业：校长</p>
+            <p>职业：国服雷兹</p>
             <p>兴趣爱好：打瓦</p>
         </section>
         <section class="interests">
@@ -127,14 +155,14 @@
         </section>
         <section class="valorant-highlights">
             <div class="highlight-video">
-                <h3>精彩时刻 1</h3>
+                <h3 class="highlight-title">精彩时刻 1</h3>
                 <video controls>
                     <source src="highlight1.mp4" type="video/mp4">
                     您的浏览器不支持视频标签。
                 </video>
             </div>
             <div class="highlight-video">
-                <h3>精彩时刻 2</h3>
+                <h3 class="highlight-title">精彩时刻 2</h3>
                 <video controls>
                     <source src="highlight2.mp4" type="video/mp4">
                     您的浏览器不支持视频标签。
@@ -142,5 +170,8 @@
             </div>
         </section>
     </div>
+    <footer>
+        <p>© 2024 ZZH. All rights reserved. | <a href="mailto:your-email@example.com">Contact</a></p>
+    </footer>
 </body>
 </html>
