--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-            color: #333;
+            background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+            color: #fff;
             margin: 0;
             padding: 0;
-            animation: gradient 15s ease infinite;
+            animation: gradient 10s ease infinite;
             background-size: 400% 400%;
         }
 
@@ -46,17 +46,23 @@
             margin: 0;
             animation: fadeInDown 2s;
             font-size: 3em;
+            color: #ff6f61;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .profile p {
             animation: fadeInUp 2s;
-            font-size: 1.2em;
+            font-size: 1.5em;
+            color: #f6d365;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         .interests h2 {
             margin-top: 2em;
             animation: fadeInUp 2s;
-            font-size: 2em;
+            font-size: 2.5em;
+            color: #ff6f61;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .valorant-highlights {
@@ -73,14 +79,14 @@
             width: 80%;
             max-width: 600px;
             border: 5px solid #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             border-radius: 10px;
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
         video:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            transform: scale(1.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
         }
 
         @keyframes fadeIn {
@@ -115,9 +121,10 @@
         }
 
         .highlight-title {
-            font-size: 1.5em;
-            color: #333;
+            font-size: 1.8em;
+            color: #ffd700;
             margin-bottom: 1em;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         footer {
@@ -130,7 +137,7 @@
         }
 
         footer a {
-            color: #fda085;
+            color: #ffd700;
             text-decoration: none;
             transition: color 0.3s;
         }
@@ -138,20 +145,37 @@
         footer a:hover {
             color: #fff;
         }
+
+        .rainbow-text {
+            background: linear-gradient(to right, #ff6f61, #ffd700, #f6d365, #84fab0, #8fd3f4);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: rainbow 5s ease infinite;
+            background-size: 200% 200%;
+        }
+
+        @keyframes rainbow {
+            0%, 100% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>ZZH的个人网页</h1>
+        <h1 class="rainbow-text">ZZH的个人网页</h1>
     </header>
     <div class="container">
         <section class="profile">
-            <h1>ZZH</h1>
-            <p>职业：国服雷兹</p>
+            <h1 class="rainbow-text">ZZH</h1>
+            <p>职业：校长</p>
             <p>兴趣爱好：打瓦</p>
         </section>
         <section class="interests">
-            <h2>无畏契约精彩时刻</h2>
+            <h2 class="rainbow-text">无畏契约精彩时刻</h2>
         </section>
         <section class="valorant-highlights">
             <div class="highlight-video">
