增加两个视频

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,9 +20,11 @@
             0% {
                 background-position: 0% 50%;
             }
+
             50% {
                 background-position: 100% 50%;
             }
+
             100% {
                 background-position: 0% 50%;
             }
@@ -90,6 +93,7 @@
             from {
                 opacity: 0;
             }
+
             to {
                 opacity: 1;
             }
@@ -100,6 +104,7 @@
                 transform: translateY(20px);
                 opacity: 0;
             }
+
             to {
                 transform: translateY(0);
                 opacity: 1;
@@ -111,6 +116,7 @@
                 transform: translateY(-20px);
                 opacity: 0;
             }
+
             to {
                 transform: translateY(0);
                 opacity: 1;
@@ -143,6 +149,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>ZZH的个人网页</h1>
@@ -171,10 +178,27 @@
                     您的浏览器不支持视频标签。
                 </video>
             </div>
+            <div class="highlight-video">
+                <h3 class="highlight-title">至暗时刻 1</h3>
+                <video controls>
+                    <source src="highlight3.mp4" type="video/mp4">
+                    您的浏览器不支持视频标签。
+                </video>
+                <p>本来无敌了，空中伦没有巴比花园给了个消散略显难受。</p>
+            </div>
+            <div class="highlight-video">
+                <h3 class="highlight-title">精彩时刻 3</h3>
+                <video controls>
+                    <source src="highlight4.mp4" type="video/mp4">
+                    您的浏览器不支持视频标签。
+                </video>
+                <p>无间配合，三个连续的Free Kills迫使对面只能慢打。</p>
+            </div>
         </section>
     </div>
     <footer>
         <p>© 2024 ZZH. All rights reserved. | <a href="mailto:499023185@qq.com">Contact</a></p>
     </footer>
 </body>
+
 </html>
