Add Terraria subpage

--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@
                 <p>收录至暗时刻 1 与精彩时刻 3。</p>
                 <a href="valorant.html">进入页面</a>
             </article>
+            <article class="subpage-card">
+                <h3>泰拉瑞亚</h3>
+                <p>整理 Boss 召唤顺序与 NPC 资料表。</p>
+                <a href="terraria.html">进入页面</a>
+            </article>
         </section>
     </div>
     <footer>
