Add Sultan guide tabs and CSV data

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZZH的个人网页</title>
+    <title>ZZH攻略站</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -157,13 +157,14 @@
 
 <body>
     <header>
-        <h1>ZZH的个人网页</h1>
+        <h1>ZZH攻略站</h1>
     </header>
     <div class="container">
         <section class="profile">
             <h1>ZZH</h1>
-            <p>职业：校长</p>
-            <p>兴趣爱好：打瓦</p>
+            <p>职业：攻略站站长</p>
+            <p>兴趣爱好：整理游戏攻略、规划路线</p>
+            <p>这里是游戏攻略站，汇总常玩的游戏资料与关键节点。</p>
         </section>
         <section class="interests">
             <h2>精彩内容分区</h2>
@@ -183,6 +184,11 @@
                 <h3>泰拉瑞亚</h3>
                 <p>整理 Boss 召唤顺序与 NPC 资料表。</p>
                 <a href="terraria.html">进入页面</a>
+            </article>
+            <article class="subpage-card">
+                <h3>苏丹的游戏</h3>
+                <p>人物、事件、道具三类攻略表格。</p>
+                <a href="sultan.html">进入页面</a>
             </article>
         </section>
     </div>
