--- a/valorant.html
+++ b/valorant.html
@@ -104,6 +104,44 @@
             color: #5a3a2e;
         }
 
+        .valorant-icons {
+            margin: 2em auto 1.5em;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1.5em;
+        }
+
+        .icon-card {
+            background: rgba(255, 255, 255, 0.75);
+            padding: 1.2em 1.5em;
+            border-radius: 16px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+            width: min(180px, 100%);
+        }
+
+        .icon-badge {
+            width: 64px;
+            height: 64px;
+            margin: 0 auto 0.8em;
+            border-radius: 18px;
+            display: grid;
+            place-items: center;
+            background: #0f1923;
+            box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.2);
+        }
+
+        .icon-label {
+            font-weight: 600;
+            color: #0f1923;
+        }
+
+        .icon-desc {
+            margin-top: 0.4em;
+            color: #5a3a2e;
+            font-size: 0.95em;
+        }
+
         footer {
             background-color: rgba(0, 0, 0, 0.7);
             color: #fff;
@@ -132,6 +170,38 @@
     <div class="container">
         <h2 class="page-title">无畏契约精彩时刻</h2>
         <a class="back-link" href="index.html">← 返回主页</a>
+        <section class="valorant-icons">
+            <div class="icon-card">
+                <div class="icon-badge">
+                    <svg width="36" height="36" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                        <path d="M13 2L3 14h7l-1 8 10-12h-7l1-8z" fill="#25F4EE" stroke="#25F4EE" stroke-width="0.5" />
+                    </svg>
+                </div>
+                <div class="icon-label">闪电</div>
+                <div class="icon-desc">霓虹速度感与电能爆发。</div>
+            </div>
+            <div class="icon-card">
+                <div class="icon-badge">
+                    <svg width="36" height="36" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                        <circle cx="12" cy="12" r="8" stroke="#ff4655" stroke-width="2" />
+                        <circle cx="12" cy="12" r="2" fill="#ff4655" />
+                        <path d="M12 2v4M12 18v4M2 12h4M18 12h4" stroke="#ff4655" stroke-width="2" />
+                    </svg>
+                </div>
+                <div class="icon-label">准星</div>
+                <div class="icon-desc">精准爆头的竞技节奏。</div>
+            </div>
+            <div class="icon-card">
+                <div class="icon-badge">
+                    <svg width="36" height="36" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                        <path d="M12 3l7 4v5c0 4.4-3 7.8-7 9-4-1.2-7-4.6-7-9V7l7-4z" fill="#ffb703" />
+                        <circle cx="12" cy="12" r="2.5" fill="#0f1923" />
+                    </svg>
+                </div>
+                <div class="icon-label">爆能核心</div>
+                <div class="icon-desc">象征拆包与据点对抗。</div>
+            </div>
+        </section>
         <section class="highlights">
             <div class="highlight-video">
                 <h3 class="highlight-title">至暗时刻 1</h3>
