Add message board with Giscus

--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
                 <p>人物、事件、道具三类攻略表格。</p>
                 <a href="sultan.html">进入页面</a>
             </article>
+            <article class="subpage-card">
+                <h3>留言板</h3>
+                <p>欢迎留下你的建议与交流想法。</p>
+                <a href="message-board.html">进入页面</a>
+            </article>
         </section>
     </div>
     <footer>
