--- a/message-board.html
+++ b/message-board.html
@@ -125,21 +125,11 @@
                 2. data-category-id
                 并替换下面的 PLACEHOLDER 值。
             -->
-            <script src="https://giscus.app/client.js"
-                data-repo="PorryZ/PorryZ.github.io"
-                data-repo-id="PLACEHOLDER_REPO_ID"
-                data-category="Announcements"
-                data-category-id="PLACEHOLDER_CATEGORY_ID"
-                data-mapping="pathname"
-                data-strict="0"
-                data-reactions-enabled="1"
-                data-emit-metadata="0"
-                data-input-position="bottom"
-                data-theme="light"
-                data-lang="zh-CN"
-                crossorigin="anonymous"
-                async>
-            </script>
+            <script src="https://giscus.app/client.js" data-repo="PorryZ/PorryZ.github.io" data-repo-id="R_kgDOMIxOfA"
+                data-category="Announcements" data-category-id="DIC_kwDOMIxOfM4C13TV" data-mapping="pathname"
+                data-strict="0" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom"
+                data-theme="light" data-lang="zh-CN" crossorigin="anonymous" async>
+                </script>
         </section>
     </div>
     <footer>
