--- a/message-board.html
+++ b/message-board.html
@@ -128,7 +128,7 @@
             <script src="https://giscus.app/client.js" data-repo="PorryZ/PorryZ.github.io" data-repo-id="R_kgDOMIxOfA"
                 data-category="Announcements" data-category-id="DIC_kwDOMIxOfM4C13TV" data-mapping="pathname"
                 data-strict="0" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom"
-                data-theme="light" data-lang="zh-CN" crossorigin="anonymous" async>
+                data-theme="preferred_color_scheme" data-lang="zh-CN" crossorigin="anonymous" async>
                 </script>
         </section>
     </div>
