--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZZH攻略站</title>
+    <title>ZZH信息分享站</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -157,14 +157,14 @@
 
 <body>
     <header>
-        <h1>ZZH攻略站</h1>
+        <h1>ZZH信息分享站</h1>
     </header>
     <div class="container">
         <section class="profile">
             <h1>ZZH</h1>
-            <p>职业：攻略站站长</p>
-            <p>兴趣爱好：整理游戏攻略、规划路线</p>
-            <p>这里是游戏攻略站，汇总常玩的游戏资料与关键节点。</p>
+            <p>身份：普通玩家，随手整理一些资料</p>
+            <p>兴趣爱好：记录游戏信息、分享小心得</p>
+            <p>这里是一个信息分享站，汇总常玩的游戏资料与个人笔记，仅供参考。</p>
         </section>
         <section class="interests">
             <h2>精彩内容分区</h2>
